--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^13.3.4",
+    "@radix-ui/react-dialog": "^1.0.3",
     "@react-three/drei": "^9.66.1",
     "@react-three/fiber": "^8.13.0",
     "@rocketseat/eslint-config": "^1.2.0",
