--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.0.3",
     "@react-three/drei": "^9.66.1",
     "@react-three/fiber": "^8.13.0",
+    "@react-three/postprocessing": "^2.11.0",
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
@@ -26,6 +27,7 @@
     "next": "13.3.4",
     "phosphor-react": "^1.4.1",
     "postcss": "8.4.23",
+    "postprocessing": "^6.31.0",
     "r3f-perf": "^7.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
